[gd_scene load_steps=19 format=3 uid="uid://u2ido474y8mh"]

[ext_resource type="Script" uid="uid://cctjfvhlvs7ti" path="res://scripts/main.gd" id="1_6r6rf"]
[ext_resource type="Script" uid="uid://d2aoea8v8dhbn" path="res://scripts/game_manager.gd" id="2_uto3c"]
[ext_resource type="PackedScene" uid="uid://co5a54ikiyngv" path="res://scenes/BoardBox.tscn" id="3_8xsmb"]
[ext_resource type="Script" uid="uid://d104hvrlv5e7t" path="res://scripts/board_manager.gd" id="3_ue88o"]
[ext_resource type="Texture2D" uid="uid://dcab672v3xr7i" path="res://assets/images/_system/player_chip_pink.png" id="3_vj62h"]
[ext_resource type="Texture2D" uid="uid://00n434ldxlf7" path="res://assets/images/boards/board_bg_layout_default.png" id="4_lhr70"]
[ext_resource type="Script" uid="uid://b2202pup6tli1" path="res://scripts/sudden_manager.gd" id="4_wp0k4"]
[ext_resource type="Texture2D" uid="uid://56lrft1krf8a" path="res://assets/images/_system/player_chip_blue.png" id="8_jrjac"]
[ext_resource type="PackedScene" uid="uid://0a47turok56b" path="res://game_hud/scenes/GameHud.tscn" id="8_kivnl"]
[ext_resource type="Script" uid="uid://b08iraa6r6afi" path="res://scripts/chips_variables.gd" id="10_2s0av"]
[ext_resource type="PackedScene" uid="uid://d14tvpl4sar43" path="res://3d_dice/DiceBox.tscn" id="11_0jnqq"]

[sub_resource type="Animation" id="Animation_4vr6i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_t4pbt"]
resource_name = "Static"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 3.86374, 0.435276),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.2, 1.75), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vafqy"]
_data = {
&"RESET": SubResource("Animation_4vr6i"),
&"Static": SubResource("Animation_t4pbt")
}

[sub_resource type="Animation" id="Animation_a0c3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_jkdnq"]
resource_name = "Static"

[sub_resource type="Animation" id="Animation_4jwhi"]
resource_name = "Static2"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.2, 1.8), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6w06"]
_data = {
&"RESET": SubResource("Animation_a0c3x"),
&"Static": SubResource("Animation_jkdnq"),
&"Static2": SubResource("Animation_4jwhi")
}

[node name="MAIN" type="Node2D"]
script = ExtResource("1_6r6rf")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_uto3c")
debug_score_p1 = 5
debug_score_p2 = 4
debug_force_dice = 12

[node name="BoardManager" type="Node" parent="."]
script = ExtResource("3_ue88o")

[node name="SuddenDeathManager" type="Node" parent="."]
script = ExtResource("4_wp0k4")

[node name="BoardLayout" type="TextureRect" parent="."]
texture = ExtResource("4_lhr70")
metadata/_edit_lock_ = true

[node name="Box_00" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(208, 1716)
scale = Vector2(0.991844, 1)

[node name="Box_01" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(212, 1582)

[node name="Box_02" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(428, 1582)

[node name="Box_03" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(644, 1582)

[node name="Box_04" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(864, 1586)

[node name="Box_05" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(862, 1371)

[node name="Box_06" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(644, 1370)

[node name="Box_07" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(428, 1370)

[node name="Box_08" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(216, 1370)

[node name="Box_09" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(212, 1164)

[node name="Box_10" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(428, 1164)

[node name="Box_11" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(644, 1164)

[node name="Box_12" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(864, 1164)

[node name="Box_13" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(860, 974)

[node name="Box_14" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(644, 974)

[node name="Box_15" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(428, 974)

[node name="Box_16" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(216, 974)

[node name="Box_17" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(212, 771)

[node name="Box_18" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(428, 771)

[node name="Box_19" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(644, 771)

[node name="Box_20" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(864, 771)

[node name="Box_21" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(860, 553)

[node name="Box_22" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(644, 553)

[node name="Box_23" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(428, 553)

[node name="Box_24" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(216, 553)

[node name="Box_25" parent="BoardLayout" instance=ExtResource("3_8xsmb")]
position = Vector2(540, 365)

[node name="playerChipPink" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(540, 1763)
scale = Vector2(2, 2)
texture = ExtResource("3_vj62h")
offset = Vector2(-10, -10)
script = ExtResource("10_2s0av")

[node name="AnimationPlayer" type="AnimationPlayer" parent="playerChipPink"]
libraries = {
&"": SubResource("AnimationLibrary_vafqy")
}
autoplay = "Static"

[node name="playerChipBlue" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(540, 1755)
scale = Vector2(2, 2)
texture = ExtResource("8_jrjac")
offset = Vector2(10, 0)
script = ExtResource("10_2s0av")

[node name="AnimationPlayer" type="AnimationPlayer" parent="playerChipBlue"]
libraries = {
&"": SubResource("AnimationLibrary_d6w06")
}
autoplay = "Static2"

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="DiceViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
size_flags_horizontal = 0
size_flags_vertical = 0
metadata/_edit_lock_ = true

[node name="DiceViewport" type="SubViewport" parent="DiceViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1080, 1920)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="Dice_Box" parent="DiceViewportContainer/DiceViewport" instance=ExtResource("11_0jnqq")]

[node name="GameHud" parent="." instance=ExtResource("8_kivnl")]
